--- a/src/components/QuestionsPanel.css
+++ b/src/components/QuestionsPanel.css
@@ -2,5 +2,9 @@
     width: 40px;
     height: 30px;
     border-radius: 50%;
+    border: 1px solid black;
+}
 
+.center {
+    text-align: center;
 }
